fixed the updated UI overflow behaviour

--- a/shared/js/ui/modal/whats-new/Renderer.scss
+++ b/shared/js/ui/modal/whats-new/Renderer.scss
@@ -2,7 +2,8 @@
 @import "../../../../css/static/properties";
 
 .container {
-    width: 57em;
+    /* width: 57em; */
+    max-width: 57em;
     min-width: 20em;
 
     flex-shrink: 1;
